# CMakeYZL

./: CMakeLists.txt  README.md
3dparty/libjpeg/lib/: libjpeg.lib
3dparty/libtiff/lib/: tiffd.lib
3dparty/libtiff/lib/release/: tiff.lib
src/DemoYZL/: CMakeLists.txt  CMakeYZL.cpp  CMakeYZL.h
